--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "the_algorithms_rust"
 edition = "2021"
 version = "0.1.0"
 
+[profile.test]
+args = ["--nocapture"]
+
+
 [dependencies]
 lazy_static = "1.4.0"
 num-bigint = { version = "0.4", optional = true }
